# kevinbotlib-deploytool-example

./: Deployfile.toml  README.md  pyproject.toml
assets/: example.txt
deploy/: example.txt
src/kevinbotlib_deploytool_example/: __about__.py  __init__.py  __main__.py  main.py
