[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevinbotlib-deploytool-example"
dynamic = ["version"]
description = 'Example Robot to Deploy with KevinbotLib DeployTool'
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
keywords = []
authors = [
  { name = "meowmeowahr", email = "meowmeowahr@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "kevinbotlib>=1.0.0a5",
]

[project.urls]
Documentation = "https://github.com/meowmeowahr/kevinbotlib-deploytool-example#readme"
Issues = "https://github.com/meowmeowahr/kevinbotlib-deploytool-example/issues"
Source = "https://github.com/meowmeowahr/kevinbotlib-deploytool-example"

[tool.hatch.version]
path = "src/kevinbotlib_deploytool_example/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kevinbotlib_deploytool_example tests}"

[tool.coverage.run]
source_pkgs = ["kevinbotlib_deploytool_example", "tests"]
branch = true
parallel = true
omit = [
  "src/kevinbotlib_deploytool_example/__about__.py",
]

[tool.coverage.paths]
kevinbotlib_deploytool_example = ["src/kevinbotlib_deploytool_example", "*/kevinbotlib-deploytool-example/src/kevinbotlib_deploytool_example"]
tests = ["tests", "*/kevinbotlib-deploytool-example/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
